--- a/web/src/index.html
+++ b/web/src/index.html
@@ -262,10 +262,13 @@
 							<div class="detail-body">
 								<div class="desc"></div>
 							</div>
-							<div class="minimap"></div>
+							
 						</div>
 
 					</div>
+                                        <div id="container-minimap">
+                                            <div id="minimap" class=""></div>
+                                        </div>
 
 				</div><!-- .streetview-left -->
 
