fix Fight results

--- a/web/src/index.html
+++ b/web/src/index.html
@@ -266,7 +266,7 @@
 							<div class="detail-body">
 								<div class="desc"></div>
 							</div>
-							
+
 						</div>
 
 					</div>
@@ -278,7 +278,7 @@
 
 				<div class="streetview-right">
                                     <div id="gmap-streetview">
-                                        
+
                                     </div>
 				</div><!-- .streetview-right -->
 
@@ -371,7 +371,7 @@
 				<a href="" class="close">Fermer</a>
 				<table>
 					<tr>
-						<td class="fighter fighter_one">
+						<td class="result_fighter fighter_one">
 							<div class="name"></div>
 							<div class="flag"><img src="" /></div>
 							<div class="portrait"><img src="" /></div>
@@ -379,7 +379,7 @@
 						<td>
 							<img src="/img/duels/duels_bilan_vs.png" alt="" />
 						</td>
-						<td class="fighter fighter_two">
+						<td class="result_fighter fighter_two">
 							<div class="name"></div>
 							<div class="flag"><img src="" /></div>
 							<div class="portrait"><img src="" /></div>
@@ -387,76 +387,89 @@
 					</tr>
 
 					<tr>
-						<td class="fighter fighter_one">
+						<td class="result_fighter fighter_one">
 							<div class="nb_leg_wins"></div>
 						</td>
 						<td>
 							Victoires <br />d'étapes
 						</td>
-						<td class="fighter fighter_two">
+						<td class="result_fighter fighter_two">
 							<div class="nb_leg_wins"></div>
 						</td>
 					</tr>
 
 					<tr>
-						<td class="fighter fighter_one">
+						<td class="result_fighter fighter_one">
 							<div class="pct_leading"></div>
 						</td>
 						<td>
 							Temps passé en <br />tête du général
 						</td>
-						<td class="fighter fighter_two">
+						<td class="result_fighter fighter_two">
 							<div class="pct_leading"></div>
 						</td>
 					</tr>
 
 					<tr>
-						<td class="fighter fighter_one">
+						<td class="result_fighter fighter_one">
 							<div class="average_speed"></div>
 						</td>
 						<td>
 							Meilleure<br /> vitesse moyenne
 						</td>
-						<td class="fighter fighter_two">
+						<td class="result_fighter fighter_two">
 							<div class="average_speed"></div>
 						</td>
 					</tr>
 
 					<tr>
-						<td class="fighter fighter_one">
+						<td class="result_fighter fighter_one">
 							<div class="ahead_of_2nd"></div>
 						</td>
 						<td>
 							Meilleure avance <br />sur le deuxième
 						</td>
-						<td class="fighter fighter_two">
+						<td class="result_fighter fighter_two">
 							<div class="ahead_of_2nd"></div>
 						</td>
 					</tr>
 
 					<tr>
-						<td class="fighter fighter_one">
+						<td class="result_fighter fighter_one">
 							<div class="nb_wins"></div>
 						</td>
 						<td>
 							Nombre de <br />victoires finales
 						</td>
-						<td class="fighter fighter_two">
+						<td class="result_fighter fighter_two">
 							<div class="nb_wins"></div>
 						</td>
 					</tr>
 
 					<tr>
-						<td class="fighter fighter_one">
+						<td class="result_fighter fighter_one">
 							<div class="doping"></div>
 						</td>
 						<td>
 							Contrôle <br />antidopage
 						</td>
-						<td class="fighter fighter_two">
+						<td class="result_fighter fighter_two">
 							<div class="doping"></div>
 						</td>
 					</tr>
+
+					<tr>
+						<td class="result_fighter fighter_one">
+							<div class="winner"></div>
+						</td>
+						<td>
+
+						</td>
+						<td class="result_fighter fighter_two">
+							<div class="winner"></div>
+						</td>
+					</tr>
+
 				</table>
 				<a href="/duels-de-legendes/">Nouvelle Course</a>
 
