--- a/web/src/index.html
+++ b/web/src/index.html
@@ -10,6 +10,7 @@
 		<link href="http://fonts.googleapis.com/css?family=Lato:400,700,900|Oswald:400,700&amp;subset=latin" rel="stylesheet" type="text/css">
 		<link rel="stylesheet" href="/css/styles.css" type="text/css" />
 	    <link rel="shortcut icon" href="/favicon.ico" />
+	    <meta name="viewport" content="width=1024" />
 	    <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
 	    <link rel="apple-touch-icon" sizes="72x72" href="/apple-touch-icon-72x72.png" />
 	    <link rel="apple-touch-icon" sizes="114x114" href="/apple-touch-icon-114x114.png" />
