fix places jScrollPane, fix Traces Slider

--- a/web/src/index.html
+++ b/web/src/index.html
@@ -255,8 +255,9 @@
 									Trajet Dynamique
 								</li>
 							</ul>
-
-							<ul class="unstyled streetview-list"></ul>
+							<div class="streetview-list-container">
+								<ul class="unstyled streetview-list"></ul>
+							</div>
 						</div>
 
 						<div class="detail">
