Winners : fix multi filters

--- a/web/src/index.html
+++ b/web/src/index.html
@@ -211,7 +211,7 @@
 						<div class="slider"></div>
 					</div>
 					<div class="age filters-block">
-						<label>Age lors de la victoire</label>
+						<label>Âge lors de la victoire</label>
 						<div class="slider"></div>
 					</div>
 					<div class="nationality filters-block">
