--- a/web/src/index.html
+++ b/web/src/index.html
@@ -9,12 +9,12 @@
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 		<link href="http://fonts.googleapis.com/css?family=Lato:400,700,900|Oswald:400,700&amp;subset=latin" rel="stylesheet" type="text/css">
 		<link rel="stylesheet" href="/css/styles.css" type="text/css" />
-	    <link rel="shortcut icon" href="/favicon.ico" />
-	    <meta name="viewport" content="width=1024" />
-	    <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
-	    <link rel="apple-touch-icon" sizes="72x72" href="/apple-touch-icon-72x72.png" />
-	    <link rel="apple-touch-icon" sizes="114x114" href="/apple-touch-icon-114x114.png" />
-        <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?sensor=true&libraries=places,geometry"></script>
+		<link rel="shortcut icon" href="/favicon.ico" />
+		<meta name="viewport" content="width=1024" />
+		<link rel="apple-touch-icon" href="/apple-touch-icon.png" />
+		<link rel="apple-touch-icon" sizes="72x72" href="/apple-touch-icon-72x72.png" />
+		<link rel="apple-touch-icon" sizes="114x114" href="/apple-touch-icon-114x114.png" />
+		<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?sensor=true&libraries=places,geometry"></script>
 		<script src="/js/modernizr.js" type="text/javascript"></script>
 		<script src="/js/scripts.js" type="text/javascript"></script>
 
@@ -66,12 +66,12 @@
 			<div id="template-search" class="template">
 				<header></header>
 				<div class="content">
-                                        <form id="city_search" method="get">
+					<form id="city_search" method="get">
 						<input type="text" id="search" name="city" value="" placeholder="ville" />
 					</form>
-                                        <div class="map-container-full">
-                                            <div id="gmap-search"></div>
-                                        </div>
+					<div class="map-container-full">
+						<div id="gmap-search"></div>
+					</div>
 				</div>
 				<footer></footer>
 			</div>
@@ -109,7 +109,10 @@
 						</div>
 					</div>
 					<div class="map-container">
-						<a href="/" class="back">Retour</a>
+						<div class="map-toolbox">
+							<a href="/recherche/" class="back">Retour</a>
+							<div class="city"></div>
+						</div>
 						<div id="gmap-traces"></div>
 					</div>
 					<div class="traces-right disabled">
@@ -149,7 +152,7 @@
 						<div class="timeline-right">
 							<div class="selectors">
 								<label for="multi-select"><input type="checkbox" name="multi-select" id="multi-select">MultiSelection</label>
-								<label for="select-all"><input type="checkbox" name="select-all" id="select-all">Tout sélectionner</label>
+								<label for="select-all"><input type="checkbox" name="select-all" id="select-all">Voir les 100 tracés</label>
 							</div>
 						</div><!-- .timeline-right -->
 					</div>
@@ -272,16 +275,16 @@
 						</div>
 
 					</div>
-                                        <div id="container-minimap">
-                                            <div id="minimap" class=""></div>
-                                        </div>
+										<div id="container-minimap">
+											<div id="minimap" class=""></div>
+										</div>
 
 				</div><!-- .streetview-left -->
 
 				<div class="streetview-right">
-                                    <div id="gmap-streetview">
+									<div id="gmap-streetview">
 
-                                    </div>
+									</div>
 				</div><!-- .streetview-right -->
 
 				<footer></footer>
