Fix "choisir un autre coureur"

--- a/web/src/index.html
+++ b/web/src/index.html
@@ -306,14 +306,14 @@
 						<div class="name"><strong>Votre Joueur</strong></div>
 						<div class="flag"><img src="" /></div>
 						<div class="bio"></div>
-						<a href="" class="choose-fighter">Choisir un autre coureur</a>
+						<a href="" class="choose-fighter">Choisir un coureur</a>
 					</div>
 					<a href="" class="start">Start</a>
 					<div class="fighter_two fighter" data-fighter="fighter_two" data-id="">
 						<div class="name"><strong>Son Adversaire</strong></div>
 						<div class="flag"><img src="" /></div>
 						<div class="bio"></div>
-						<a href="" class="choose-fighter">Choisir un autre coureur</a>
+						<a href="" class="choose-fighter">Choisir un coureur</a>
 					</div>
 				</div>
 				<footer></footer>
