--- a/web/src/index.html
+++ b/web/src/index.html
@@ -492,7 +492,7 @@
 					</div>
 
 					<div class="fight">
-						<a href="" class="link">Duels de légende</a>
+						<a href="" class="link">Duels de légendes</a>
 					</div>
 
 					<div class="streetview">
