Corrections suite à demande client

--- a/web/src/index.html
+++ b/web/src/index.html
@@ -230,6 +230,7 @@
 							Rechercher
 							<input type="text" name="winner_search" id="winner_search" placeholder="Nom" />
 						</label>
+						<a href="" class="reset">Reset Form</a>
 					</div>
 				</div>
 				<footer></footer>
