skin page résultats

--- a/web/src/index.html
+++ b/web/src/index.html
@@ -377,15 +377,15 @@
 				<a href="" class="close">Fermer</a>
 				<table>
 					<tr>
-						<td class="result_fighter fighter_one">
+						<td class="result_fighter fighter_one header-results">
 							<div class="name"></div>
 							<div class="flag"><img src="" /></div>
 							<div class="portrait"><img src="" /></div>
 						</td>
-						<td>
+						<td class="v-top legend-results no-border aligncenter">
 							<img src="/img/duels/duels_bilan_vs.png" alt="" />
 						</td>
-						<td class="result_fighter fighter_two">
+						<td class="result_fighter fighter_two header-results">
 							<div class="name"></div>
 							<div class="flag"><img src="" /></div>
 							<div class="portrait"><img src="" /></div>
@@ -396,7 +396,7 @@
 						<td class="result_fighter fighter_one">
 							<div class="nb_leg_wins"></div>
 						</td>
-						<td>
+						<td class="v-top legend-results aligncenter">
 							Victoires <br />d'étapes
 						</td>
 						<td class="result_fighter fighter_two">
@@ -408,7 +408,7 @@
 						<td class="result_fighter fighter_one">
 							<div class="pct_leading"></div>
 						</td>
-						<td>
+						<td class="v-top legend-results aligncenter">
 							Temps passé en <br />tête du général
 						</td>
 						<td class="result_fighter fighter_two">
@@ -420,7 +420,7 @@
 						<td class="result_fighter fighter_one">
 							<div class="average_speed"></div>
 						</td>
-						<td>
+						<td class="v-top legend-results aligncenter">
 							Meilleure<br /> vitesse moyenne
 						</td>
 						<td class="result_fighter fighter_two">
@@ -432,7 +432,7 @@
 						<td class="result_fighter fighter_one">
 							<div class="ahead_of_2nd"></div>
 						</td>
-						<td>
+						<td class="v-top legend-results aligncenter">
 							Meilleure avance <br />sur le deuxième
 						</td>
 						<td class="result_fighter fighter_two">
@@ -444,7 +444,7 @@
 						<td class="result_fighter fighter_one">
 							<div class="nb_wins"></div>
 						</td>
-						<td>
+						<td class="v-top legend-results aligncenter">
 							Nombre de <br />victoires finales
 						</td>
 						<td class="result_fighter fighter_two">
@@ -456,7 +456,7 @@
 						<td class="result_fighter fighter_one">
 							<div class="doping"></div>
 						</td>
-						<td>
+						<td class="v-top legend-results aligncenter">
 							Contrôle <br />antidopage
 						</td>
 						<td class="result_fighter fighter_two">
@@ -468,8 +468,8 @@
 						<td class="result_fighter fighter_one">
 							<div class="winner"></div>
 						</td>
-						<td>
-
+						<td class="v-top legend-results aligncenter">
+							<a href="/duels-de-legendes/"><img src="/img/duels/bt-replay-small.png" alt="Nouvelle Course" /></a>
 						</td>
 						<td class="result_fighter fighter_two">
 							<div class="winner"></div>
@@ -477,8 +477,6 @@
 					</tr>
 
 				</table>
-				<a href="/duels-de-legendes/">Nouvelle Course</a>
-
 			</div>
 
 			<div id="template-header" class="template">
