hyperlapse with minimap

--- a/web/src/index.html
+++ b/web/src/index.html
@@ -285,7 +285,7 @@
 				<div class="streetview-right">
 
                                     <div id="gmap-hyperlapse" class="hide">
-                                        <span id="hyperlapseLoading"></span>
+                                        <span id="hyperlapseLoading">Chargement...</span>
                                         
                                     </div>
                                     
