modification texte multi sélection

--- a/web/src/index.html
+++ b/web/src/index.html
@@ -151,7 +151,7 @@
 						</div><!-- .timeline-left -->
 						<div class="timeline-right">
 							<div class="selectors">
-								<label for="multi-select"><input type="checkbox" name="multi-select" id="multi-select">MultiSelection</label>
+								<label for="multi-select"><input type="checkbox" name="multi-select" id="multi-select">Multi-sélection</label>
 								<label for="select-all"><input type="checkbox" name="select-all" id="select-all">Voir les 100 tracés</label>
 							</div>
 						</div><!-- .timeline-right -->
