StreetView : fix hyperlapse icon

--- a/web/src/index.html
+++ b/web/src/index.html
@@ -201,7 +201,7 @@
 							<li class="winner">Vainqueur</li>
 							<li class="position">Classement</li>
 							<li class="leg_win">Victoire d'étape</li>
-							<li class="abandon">Eliminé</li>
+							<li class="abandon">Elimination / Abandon</li>
 						</ul>
 					</div>
 				</div><!-- .top-winner-stats -->
@@ -238,7 +238,7 @@
 
 			<div class="template" id="template-streetview-place">
 				<li>
-					<a href=":place_url">
+					<a href=":place_url" data-id=":place_id">
 						<img src=":place_pic" alt="">
 						<div class="title">:place_title</div>
 						<div class=":place_type"></div>
