Fight : add back button

--- a/web/src/index.html
+++ b/web/src/index.html
@@ -374,6 +374,7 @@
 					</div>
 					<div class="foreground"></div>
 					<div class="forescape"></div>
+					<a href="" class="prev">Épreuve Précédente</a>
 					<a href="" class="next">Épreuve Suivante</a>
 					<div class="results"></div>
 				</div><!-- .fight-container -->
