Winners : tooltip sur tout le li

--- a/web/src/index.html
+++ b/web/src/index.html
@@ -172,8 +172,8 @@
 			</div>
 
 			<div class="template" id="template-winner-tour">
-				<li class=":year pos-:pos">
-					<a href="#" style="top::hpos;" title=":bulle">:pos_title</a>
+				<li class=":year pos-:pos"  title=":bulle">
+					<a href="#" style="top::hpos;">:pos_title</a>
 					<div class="wins">:wins</div>
 					<div class="year">:year</div>
 				</li>
