Fight: suite animations (step 4)

--- a/web/src/index.html
+++ b/web/src/index.html
@@ -401,6 +401,10 @@
 								<div class="fighter-arrow"></div>
 							</div><!-- .fighter-infos -->
 						</div>
+						<div class="middleground">
+							<img class="radar step-3" src="/img/duels/plans/duels_plan3_e3_1.png" alt="">
+							<img class="followers step-4" src="/img/duels/plans/bg_second.png" alt="">
+						</div>
 						<div class="fighter fighter_two">
 							<div class="fighter-infos">
 								<div class="name"></div>
@@ -425,6 +429,12 @@
 						<img class="public-right-1 step-1" src="/img/duels/plans/duels_plan1_e0_1.png" alt="">
 
 						<img class="green step-2" src="/img/duels/plans/duels_plan1_e2_1.png" alt="">
+
+						<img class="panneaux step-3" src="/img/duels/plans/duels_plan1_e3_1.png" alt="">
+
+						<img class="trees-4 step-4" src="/img/duels/plans/duels_plan1_e4_1.png" alt="">
+
+						<img class="trees-5 step-5" src="/img/duels/plans/duels_plan1_e5_1.png" alt="">
 
 					</div>
 					<a href="" class="prev">Épreuve Précédente</a>
