Fight: more animations

--- a/web/src/index.html
+++ b/web/src/index.html
@@ -364,35 +364,16 @@
 					<div class="landscape"><img src="/img/duels/plans/duels_plan4.png" alt=""></div>
 					<div class="background">
 						<img class="fanion step-0" src="/img/duels/plans/duels_plan3_e0_1.png" alt="">
-						<img class="archeback step-0" src="/img/duels/plans/duels_plan3_e0_2.png" alt="">
+						<img class="archeback-0 step-0" src="/img/duels/plans/duels_plan3_e0_2.png" alt="">
 
 						<img class="beef-car step-1" src="/img/duels/plans/duels_plan3_e1_1.png" alt="">
 
+						<img class="archeback-5 step-5" src="/img/duels/plans/duels_plan3_e5_1.png" alt="">
+
+						<img class="doping-car step-6" src="/img/duels/plans/duels_plan3_e6_1.png" alt="">
+
 					</div>
 
-<!--
-.step-2 .background, .step-3 .background, .step-6 .background, .step-7 .background, .step-results .background {
-	background:none;
-}
-
-.step-3 .background {
-	background:url(/img/duels/plans/duels_plan3_e3_1.png) 668px top no-repeat;
-	top:165px;
-}
-
-.step-4 .background {
-	background: url(/img/duels/plans/bg-second.png) -50px top no-repeat;
-	top: 220px;
-	left: 0;
-}
-
-.step-5 .background {
-	background: url(/img/duels/plans/duels_plan3_e0_2.png) 0 45px no-repeat;
-	height: 222px;
-	left: 20px;
-	top: 92px;
-}
--->
 					<div class="fighters">
 						<div class="fighter fighter_one">
 							<div class="fighter-infos">
@@ -403,7 +384,7 @@
 						</div>
 						<div class="middleground">
 							<img class="radar step-3" src="/img/duels/plans/duels_plan3_e3_1.png" alt="">
-							<img class="followers step-4" src="/img/duels/plans/bg_second.png" alt="">
+							<img class="followers step-4" src="/img/duels/plans/bg-second.png" alt="">
 						</div>
 						<div class="fighter fighter_two">
 							<div class="fighter-infos">
@@ -414,12 +395,15 @@
 						</div>
 					</div>
 					<div class="foreground">
-						<img class="archefore step-0" src="/img/duels/plans/duels_plan2_e0_1.png" alt="">
+						<img class="archefore-0 step-0" src="/img/duels/plans/duels_plan2_e0_1.png" alt="">
 
 						<img class="lady-left step-1" src="/img/duels/plans/duels_plan2_e1_1.png" alt="">
 						<img class="lady-right step-1" src="/img/duels/plans/duels_plan3_e1_2.png" alt="">
 
 						<img class="yellow-car step-2" src="/img/duels/plans/duels_plan2_e2_1.png" alt="">
+
+						<img class="archefore-5 step-5" src="/img/duels/plans/duels_plan2_e5_1.png" alt="">
+
 					</div>
 					<div class="forescape">
 						<img class="public-left-0 step-0" src="/img/duels/plans/duels_plan1_e0_1.png" alt="">
@@ -435,6 +419,11 @@
 						<img class="trees-4 step-4" src="/img/duels/plans/duels_plan1_e4_1.png" alt="">
 
 						<img class="trees-5 step-5" src="/img/duels/plans/duels_plan1_e5_1.png" alt="">
+
+						<img class="cops-right step-6" src="/img/duels/plans/duels_plan1_e6_1.png" alt="">
+
+						<img class="public-left-7 step-7" src="/img/duels/plans/duels_plan1_e0_1.png" alt="">
+						<img class="public-right-7 step-7" src="/img/duels/plans/duels_plan1_e0_1.png" alt="">
 
 					</div>
 					<a href="" class="prev">Épreuve Précédente</a>
@@ -524,18 +513,18 @@
 					</tr>
 
 					<tr>
-						<td class="result_fighter fighter_one">
+						<td class="result_fighter fighter_one no-border">
 							<div class="doping"></div>
 						</td>
-						<td class="v-top legend-results aligncenter">
+						<td class="v-top legend-results aligncenter no-border">
 							Contrôle <br />antidopage
 						</td>
-						<td class="result_fighter fighter_two">
+						<td class="result_fighter fighter_two no-border">
 							<div class="doping"></div>
 						</td>
 					</tr>
 
-					<tr>
+					<tr class="last">
 						<td class="result_fighter fighter_one">
 							<div class="winner"></div>
 						</td>
