Fight : fix anims

--- a/web/src/index.html
+++ b/web/src/index.html
@@ -361,6 +361,10 @@
 					<div class="title">
 						<div></div>
 					</div>
+					<div class="sky">
+						<img class="clouds-2 step-2" src="/img/duels/plans/duels_plan5_e2_1.png" alt="">
+						<img class="clouds-3 step-3" src="/img/duels/plans/duels_plan5_e3_1.png" alt="">
+					</div>
 					<div class="landscape"><img src="/img/duels/plans/duels_plan4.png" alt=""></div>
 					<div class="background">
 						<img class="fanion step-0" src="/img/duels/plans/duels_plan3_e0_1.png" alt="">
