fix bug search, traces, hyperlapse

--- a/web/src/index.html
+++ b/web/src/index.html
@@ -288,10 +288,10 @@
 
 						<a id="btnCloseHyperlapse" href="/lieux-mythiques/"><img src="/img/lieux/btn_close_hp.png" alt="" /></a>
 
-						<span id="hyperlapseLoading">Chargement...</span>
-
 						<div id="hyperlapseTimeline">
-							<div class="loader"></div>
+                                                    
+                                                    <div class="loader"></div>
+                                                    <div class="playerCursor"></div>
 						</div>
 
 					</div>
