Traces : gestion Play/Pause

--- a/web/src/index.html
+++ b/web/src/index.html
@@ -146,6 +146,7 @@
 								<ul></ul>
 							</div>
 							<div class="timeline-zoom">
+								<div id="start-pause">Play</div>
 								<ul></ul>
 							</div>
 						</div><!-- .timeline-left -->
@@ -570,7 +571,7 @@
 					<li class="footer-item"><a href="/methodologie.html" class="colorbox external">Sources et méthodologie</a></li>
 				</ul>
 				<div class="share">
-					<div class="addthis_toolbox addthis_default_style">
+					<div class="addthis_toolbox addthis_default_style" addthis:title="Explorez les #données des 100 Tours de France : tracés, vainqueurs, lieux mythiques... #appli #data #TDF via @RFnvx">
 						<a class="addthis_button_google_plusone" g:plusone:size="medium"></a>
 						<a class="addthis_button_facebook_like" fb:like:layout="button_count" fb:like:locale="fr_FR"></a>
 						<a class="addthis_button_tweet"></a>
@@ -587,6 +588,6 @@
 				</div><!-- .footer-radios -->
 			</div><!-- #footer -->
 		</div>
-<!--		<script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js"></script> -->
+		<!--<script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js"></script>-->
 	</body>
 </html>
