Traces : search autocomplete city

--- a/web/src/index.html
+++ b/web/src/index.html
@@ -111,7 +111,12 @@
 					<div class="map-container">
 						<div class="map-toolbox">
 							<a href="/recherche/" class="back">Retour</a>
-							<div class="city"></div>
+							<div class="city">
+								<div class="title"></div>
+								<form id="city_search" method="get">
+									<input type="text" id="search" name="city" value="" placeholder="ville" />
+								</form>
+							</div>
 						</div>
 						<div id="gmap-traces"></div>
 					</div>
