--- a/web/src/methodologie.html
+++ b/web/src/methodologie.html
@@ -1,7 +1,19 @@
-<html>
-<head></head>
-<body>
-
+<!doctype html>
+<html lang="fr" dir="ltr">
+	<head>
+		<title>100 Tours de France - Méthodologie</title>
+		<meta charset="UTF-8" />
+		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+		<link href="http://fonts.googleapis.com/css?family=Lato:400,700,900|Oswald:400,700&amp;subset=latin" rel="stylesheet" type="text/css">
+		<link rel="stylesheet" href="/css/styles.css" type="text/css" />
+		<link rel="shortcut icon" href="/favicon.ico" />
+		<meta name="viewport" content="width=1024" />
+		<link rel="apple-touch-icon" href="/apple-touch-icon.png" />
+		<link rel="apple-touch-icon" sizes="72x72" href="/apple-touch-icon-72x72.png" />
+		<link rel="apple-touch-icon" sizes="114x114" href="/apple-touch-icon-114x114.png" />
+	</head>
+	<body>
+	<h1><img src="/img/colorbox/logo-100-tours.png" alt="100 Tours" /></h1>
 	<h2>Méthodologie</h2>
 
 		<p>Cette application interactive a été réalisée sur la base des 100 Tours de France organisés entre 1903 et 2013.</p>
@@ -43,12 +55,10 @@
 		</ul>
 
 	<h2>Remerciements</h2>
-
 		<p>
 			<strong>Alex Ly</strong> pour sa plume graphique sur tous les visages des vainqueurs.
 			<br />
 			<strong>Boris Jullien</strong> pour sa vérification inestimable de la géolocalisation des 754 villes-étapes.
 		</p>
-
 	</body>
 </html>
