--- a/web/src/index.html
+++ b/web/src/index.html
@@ -306,6 +306,10 @@
 
 						<a id="btnCloseHyperlapse" href="/lieux-mythiques/"><img src="/img/lieux/btn_close_hp.png" alt="" /></a>
 
+                                                <div id="hyperlapseTextLoader">
+                                                    Chargement...
+                                                </div>
+                                                
 						<div id="hyperlapseTimeline">
                                                     
                                                     <div class="loader"></div>
