winners slider fix

--- a/web/src/index.html
+++ b/web/src/index.html
@@ -309,9 +309,9 @@
                                                 <div id="hyperlapseTextLoader">
                                                     Chargement...
                                                 </div>
-                                                
+
 						<div id="hyperlapseTimeline">
-                                                    
+
                                                     <div class="loader"></div>
                                                     <div class="playerCursor"></div>
 						</div>
@@ -351,6 +351,7 @@
 						<div class="flag"><img src="" /></div>
 						<div class="bio"></div>
 						<a href="" class="choose-fighter">Choisir un coureur</a>
+						<div class="choose-fighter-notice">Choisissez d'abord le n°1</div>
 						<a class="random" href="">Au hasard</a>
 					</div>
 				</div>
