Traces : fix stats line

--- a/web/src/index.html
+++ b/web/src/index.html
@@ -453,7 +453,7 @@
 						<img class="public-right-7 step-7" src="/img/duels/plans/duels_plan1_e0_1.png" alt="">
 
 					</div>
-					<a href="" class="prev">Épreuve Précédente</a>
+					<!--<a href="" class="prev">Épreuve Précédente</a>-->
 					<a href="" class="next">Épreuve Suivante</a>
 					<div class="results"></div>
 				</div><!-- .fight-container -->
