Traces : fix format time

--- a/web/src/index.html
+++ b/web/src/index.html
@@ -113,7 +113,7 @@
 								<a href="" class="max"><span class="val"></span> en <span class="year"></span></a>
 							</div>
 							<div class="nb_finishers traces-left-stats clearfix">
-								<p><span class="current">xxx</span> à l'arrivée <small>en moyenne</small></p>
+								<p><span class="current">xxx</span><small>en moyenne</small></p>
 								<a href="" class="min"><span class="val"></span> en <span class="year"></span></a>
 								<div class="line"></div>
 								<a href="" class="max"><span class="val"></span> en <span class="year"></span></a>
