Fight : hide notice on load

--- a/web/src/index.html
+++ b/web/src/index.html
@@ -595,10 +595,8 @@
 					<li class="footer-item"><a href="/methodologie.html" class="colorbox external">Sources et méthodologie</a></li>
 				</ul>
 				<div class="share">
-					<div class="addthis_toolbox addthis_default_style" addthis:title="Explorez les #données des 100 Tours de France : tracés, vainqueurs, lieux mythiques... #appli #data #TDF via @RFnvx">
-						<a class="addthis_button_google_plusone" g:plusone:size="medium"></a>
-						<a class="addthis_button_facebook_like" fb:like:layout="button_count" fb:like:locale="fr_FR"></a>
-						<a class="addthis_button_tweet"></a>
+					<div class="twitter">
+
 					</div>
 				</div><!-- .share -->
 				<div class="footer-radios">
@@ -612,6 +610,5 @@
 				</div><!-- .footer-radios -->
 			</div><!-- #footer -->
 		</div>
-		<!--<script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js"></script>-->
 	</body>
 </html>
