add hyperlapse text

--- a/web/src/index.html
+++ b/web/src/index.html
@@ -313,7 +313,7 @@
                                                 </div>
 
 						<div id="hyperlapseTimeline">
-
+                                                    <div class="aide">Cliquez pour faire pause</div>
                                                     <div class="loader"></div>
                                                     <div class="playerCursor"></div>
 						</div>
