Calage duels si dopés

--- a/web/src/index.html
+++ b/web/src/index.html
@@ -344,7 +344,7 @@
 						<div class="name"><strong>Votre Joueur</strong></div>
 						<div class="flag"><img src="" /></div>
 						<div class="bio"></div>
-						<a href="" class="choose-fighter">Choisir un coureur</a>
+						<a href="" class="choose-fighter">Choisissez un coureur</a>
 						<a class="random" href="">Au hasard</a>
 					</div>
 					<a href="" class="start">Start</a>
@@ -352,7 +352,7 @@
 						<div class="name"><strong>Son Adversaire</strong></div>
 						<div class="flag"><img src="" /></div>
 						<div class="bio"></div>
-						<a href="" class="choose-fighter">Choisir un coureur</a>
+						<a href="" class="choose-fighter">Choisissez un coureur</a>
 						<div class="choose-fighter-notice">Choisissez d'abord le n°1</div>
 						<a class="random" href="">Au hasard</a>
 					</div>
