Modifications textes victoires d'étapes

--- a/web/src/index.html
+++ b/web/src/index.html
@@ -487,7 +487,7 @@
 							<div class="nb_leg_wins"></div>
 						</td>
 						<td class="v-top legend-results aligncenter">
-							Victoires <br />d'étapes
+							Étapes du tour <br />remportées
 						</td>
 						<td class="result_fighter fighter_two">
 							<div class="nb_leg_wins"></div>
