update layout résultats

--- a/web/src/index.html
+++ b/web/src/index.html
@@ -564,7 +564,7 @@
 							<a href="/duels-de-legendes/"><img src="/img/duels/bt-replay-small.png" alt="Nouvelle Course" /></a>
 						</td>
 						<td class="result_fighter fighter_two">
-							<div class="winner"></div>
+							&nbsp;
 						</td>
 					</tr>
 
