add jcarousellite, placeholder, fix fight anims

--- a/web/src/index.html
+++ b/web/src/index.html
@@ -417,6 +417,7 @@
 						</div>
 						<div class="middleground">
 							<img class="followers step-4" src="/img/duels/plans/bg-second.png" alt="">
+							<img class="doping-doctor step-6" src="/img/duels/plans/duels_plan3_e6_2.png" alt="">
 						</div>
 						<div class="fighter fighter_two">
 							<div class="fighter-infos">
@@ -433,6 +434,8 @@
 						<img class="lady-right step-1" src="/img/duels/plans/duels_plan3_e1_2.png" alt="">
 
 						<img class="yellow-car step-2" src="/img/duels/plans/duels_plan2_e2_1.png" alt="">
+
+						<img class="green-3 step-3" src="/img/duels/plans/duels_green-3.png" alt="">
 
 						<img class="archefore-5 step-5" src="/img/duels/plans/duels_plan2_e5_1.png" alt="">
 
