--- a/web/src/index.html
+++ b/web/src/index.html
@@ -296,6 +296,9 @@
 								<div class="desc"></div>
 							</div>
 
+							<div class="hyperlapse-desc">
+								Le trajet dynamique se fait du point A au point B, en vous mettant dans la peau d’un coureur du Tour de France. Vous pouvez changer de point de vue en cours de route.
+							</div>
 							<div id="minimap" class=""></div>
 
 						</div>
