--- a/web/src/index.html
+++ b/web/src/index.html
@@ -605,9 +605,9 @@
 					<li class="footer-item"><a href="/methodologie.html" class="colorbox external">Sources et méthodologie</a></li>
 				</ul>
 				<div id="addthis-share">
-					<a href="" class="addthis_button_tweet"></a>
-					<a href="" class="addthis_button_facebook_like"></a>
-					<a href="" class="addthis_button_google_plusone"></a>
+					<a href="#" class="addthis_button_tweet"></a>
+					<a href="#" class="addthis_button_facebook_like"></a>
+					<a href="#" class="addthis_button_google_plusone"></a>
 				</div><!-- .share -->
 				<div class="footer-radios">
 					<ul class="unstyled footer-radios-list">
