StreetView : change hyperlapse desc

--- a/web/src/index.html
+++ b/web/src/index.html
@@ -297,7 +297,7 @@
 							</div>
 
 							<div class="hyperlapse-desc">
-								Le trajet dynamique se fait du point A au point B, en vous mettant dans la peau d’un coureur du Tour de France. Vous pouvez changer de point de vue en cours de route.
+								Le trajet dynamique se fait de A à B, en vous mettant dans la peau d’un coureur du Tour de France. Cliquez pour faire une pause et changer d'orientation.
 							</div>
 							<div id="minimap" class=""></div>
 
