Fights - Tableau récap - Affichage du vainqueur en bas du tableau colonne de gauche

--- a/web/src/index.html
+++ b/web/src/index.html
@@ -565,7 +565,7 @@
 
 					<tr class="last">
 						<td class="result_fighter fighter_one">
-							<div class="winner"></div>
+							<div class="winner">Vainqueur</div>
 						</td>
 						<td class="v-top legend-results aligncenter">
 							<a href="/duels-de-legendes/"><img src="/img/duels/bt-replay-small.png" alt="Nouvelle Course" /></a>
