--- a/web/src/index.html
+++ b/web/src/index.html
@@ -604,10 +604,10 @@
 					<li class="footer-item">&copy; Radio France 2013 - Tous droits réservés - </li>
 					<li class="footer-item"><a href="/methodologie.html" class="colorbox external">Sources et méthodologie</a></li>
 				</ul>
-				<div id="addthis-share">
+				<div id="addthis-share" class="left">
 					<a href="#" class="addthis_button_tweet"></a>
 					<a href="#" class="addthis_button_facebook_like"></a>
-					<a href="#" class="addthis_button_google_plusone"></a>
+					<a href="#" class="addthis_button_google_plusone" g:plusone:size="medium"></a>
 				</div><!-- .share -->
 				<div class="footer-radios">
 					<ul class="unstyled footer-radios-list">
