Ajout dns prefetch addthis, facebook, twitter, google plus, affichage bandeau vainqueur sur écran résultats

--- a/web/src/index.html
+++ b/web/src/index.html
@@ -7,6 +7,12 @@
 		<title>100 Tours de France</title>
 		<meta charset="UTF-8" />
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+		<link rel="dns-prefetch" href="//fonts.googleapis.com" />
+		<link rel="dns-prefetch" href="//addthis.com" />
+		<link rel="dns-prefetch" href="//facebook.com" />
+		<link rel="dns-prefetch" href="//twitter.com" />
+		<link rel="dns-prefetch" href="//apis.google.com" />
+		<link rel="dns-prefetch" href="//maps.googleapis.com" />
 		<link href="http://fonts.googleapis.com/css?family=Lato:400,700,900|Oswald:400,700&amp;subset=latin" rel="stylesheet" type="text/css">
 		<link rel="stylesheet" href="/css/styles.css" type="text/css" />
 		<link rel="shortcut icon" href="/favicon.ico" />
@@ -477,17 +483,21 @@
 				<table>
 					<tr>
 						<td class="result_fighter fighter_one header-results">
-							<div class="name"></div>
-							<div class="flag"><img src="" /></div>
-							<div class="portrait"><img src="" /></div>
+							<div class="header-results-inner">
+								<div class="name"></div>
+								<div class="flag"><img src="" /></div>
+								<div class="portrait"><img src="" /></div>
+							</div>
 						</td>
 						<td class="v-top legend-results no-border aligncenter">
 							<img src="/img/duels/duels_bilan_vs.png" alt="" />
 						</td>
 						<td class="result_fighter fighter_two header-results">
-							<div class="name"></div>
-							<div class="flag"><img src="" /></div>
-							<div class="portrait"><img src="" /></div>
+							<div class="header-results-inner">
+								<div class="name"></div>
+								<div class="flag"><img src="" /></div>
+								<div class="portrait"><img src="" /></div>
+							</div>
 						</td>
 					</tr>
 
@@ -565,7 +575,9 @@
 
 					<tr class="last">
 						<td class="result_fighter fighter_one">
-							<div class="winner">Vainqueur</div>
+							<div class="last-winner-inner">
+								<div class="winner">Vainqueur</div>
+							</div>
 						</td>
 						<td class="v-top legend-results aligncenter">
 							<a href="/duels-de-legendes/"><img src="/img/duels/bt-replay-small.png" alt="Nouvelle Course" /></a>
