pre-render page recherche

--- a/web/src/index.html
+++ b/web/src/index.html
@@ -13,6 +13,7 @@
 		<link rel="dns-prefetch" href="//twitter.com" />
 		<link rel="dns-prefetch" href="//apis.google.com" />
 		<link rel="dns-prefetch" href="//maps.googleapis.com" />
+		<link rel="prerender" href="/recherche/" />
 		<link href="http://fonts.googleapis.com/css?family=Lato:400,700,900|Oswald:400,700&amp;subset=latin" rel="stylesheet" type="text/css">
 		<link rel="stylesheet" href="/css/styles.css" type="text/css" />
 		<link rel="shortcut icon" href="/favicon.ico" />
