--- a/web/src/index.html
+++ b/web/src/index.html
@@ -22,7 +22,7 @@
 		<link rel="apple-touch-icon" sizes="114x114" href="/apple-touch-icon-114x114.png" />
 		<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?sensor=true&libraries=places,geometry&region=FR&language=fr"></script>
 		<script src="/js/modernizr.js" type="text/javascript"></script>
-		<script src="/js/scripts.js" type="text/javascript"></script>
+		<script src="/js/main.js" type="text/javascript"></script>
 
 		<script type="text/javascript" src="http://s7.addthis.com/js/300/addthis_widget.js#async=1&domready=1"></script>
 
