Fight : infos slideUp/Down

--- a/web/src/index.html
+++ b/web/src/index.html
@@ -25,6 +25,7 @@
 		<script src="/js/lib/labjs.js"></script>
 		<script>
 		$LAB
+			.setGlobalDefaults({CacheBust:true})
 			.script('/js/es5-shim.js')
 			// .script('/js/shims.js')
 			.script('/js/lib/jquery.js')
