Ajout header radio france

--- a/web/src/index.html
+++ b/web/src/index.html
@@ -41,14 +41,24 @@
 
 	</head>
 	<body>
-
-		<header class="radiofrance" style="display:none;">
-			<h2>RadioFrance</h2>
-			<a href="http://franceinter.fr" class="franceinter" target="_blank">FranceInter</a>
-			<a href="http://franceinfo.fr" class="franceinter" target="_blank">FranceInfo</a>
-			<a href="http://radiobleue.fr" class="franceinter" target="_blank">RadioBleue</a>
-		</header>
-
+		<!-- HEADER RADIO FRANCE debut -->
+		<div class="header-footer content-header-footer" id="header-commun">
+			<div id="header-content">
+				<ul>
+					<li class="first-header"><a href="http://www.radiofrance.fr">radiofrance.fr</a></li>
+					<li><a href="http://www.franceinter.fr">france inter</a></li>
+					<li><a href="http://www.franceinfo.fr">france info</a></li>
+					<li><a href="http://www.francebleu.fr">france bleu</a></li>
+					<li><a href="http://www.franceculture.fr">france culture</a></li>
+					<li><a href="http://www.francemusique.fr">france musique</a></li>
+					<li><a href="http://fip-radio.fr">fip</a></li>
+					<li><a href="http://www.lemouv.fr">le mouv&#39;</a></li>
+					<li class="last-header"><a href="http://concerts.radiofrance.fr">les orchestres</a></li>
+				</ul>
+				<div class="clearer">&nbsp;</div>
+			</div>
+		</div>
+		<!-- HEADER RADIO FRANCE fin -->	
 		<div id="main">
 			<div id="inner"></div>
 		</div>
