--- a/web/src/index.html
+++ b/web/src/index.html
@@ -704,5 +704,15 @@
 		<img width="1" height="1" alt="" src="http://logp.xiti.com/hit.xiti?s=24121&s2=73&p=100_tours_de_france::homepage::homepage::homepage&di=&an=&ac=" >
 		</noscript>
 
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-7571900-21', 'radiofrance.fr');
+  ga('send', 'pageview');
+
+</script>
 	</body>
 </html>
