Winners : no result msg

--- a/web/src/index.html
+++ b/web/src/index.html
@@ -259,6 +259,9 @@
 					</div>
 				</div><!-- .top-winner-stats -->
 				<div class="winners_list">
+					<div class="no-results">
+						Aucun coureur ne correspond à ces critères.
+					</div>
 					<ul class="unstyled"></ul>
 				</div>
 				<div class="filters">
