--- a/web/src/index.html
+++ b/web/src/index.html
@@ -10,6 +10,7 @@
 		<link rel="dns-prefetch" href="//addthis.com" />
 		<link rel="dns-prefetch" href="//facebook.com" />
 		<link rel="dns-prefetch" href="//twitter.com" />
+		<link rel="dns-prefetch" href="//google-analytics.com /">
 		<link href="http://fonts.googleapis.com/css?family=Lato:400,700,900|Oswald:400,700&amp;subset=latin" rel="stylesheet" type="text/css">
 		<link rel="stylesheet" href="/css/styles.css" type="text/css" />
 		<link rel="shortcut icon" href="/favicon.ico" />
