Modification titte page html

--- a/web/src/index.html
+++ b/web/src/index.html
@@ -4,7 +4,7 @@
 <!--[if IE 8]> <html class="no-js lt-ie9" lang="fr" dir="ltr"> <![endif]-->
 <!--[if gt IE 8]><!--><html class="no-js" lang="fr" dir="ltr"><!--<![endif]-->
 	<head>
-		<title>100 Tours de France</title>
+		<title>100 Tours de France par Radio France</title>
 		<meta charset="UTF-8" />
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 		<link rel="dns-prefetch" href="//addthis.com" />
@@ -27,7 +27,6 @@
 		$LAB
 			.setGlobalDefaults({CacheBust:true})
 			.script('/js/es5-shim.js')
-			// .script('/js/shims.js')
 			.script('/js/lib/jquery.js')
 			.wait()
 			.script('/js/compat.js')
