--- a/web/src/index.html
+++ b/web/src/index.html
@@ -37,7 +37,6 @@
 
 		<script type="text/javascript" src="http://s7.addthis.com/js/300/addthis_widget.js#async=1&domready=1"></script>
 
-
 	</head>
 	<body>
 		<!-- HEADER RADIO FRANCE debut -->
@@ -674,6 +673,7 @@
 		  eStat_id.niveau(3, "homepage");
 		  eStat_id.niveau(4, "homepage");
 		  eStat_tag.post("ml");
+		  eStat_id.cmclient("sites-evenementiels");
 		}
 		//-->
 		</script>
@@ -704,15 +704,16 @@
 		<img width="1" height="1" alt="" src="http://logp.xiti.com/hit.xiti?s=24121&s2=73&p=100_tours_de_france::homepage::homepage::homepage&di=&an=&ac=" >
 		</noscript>
 
-<script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+		<script>
+		  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+		  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+		  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+		  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-  ga('create', 'UA-7571900-21', 'radiofrance.fr');
-  ga('send', 'pageview');
+		  ga('create', 'UA-7571900-21', 'radiofrance.fr');
+		  ga('send', 'pageview');
 
-</script>
+		</script>
+
 	</body>
 </html>
