--- a/web/src/index.html
+++ b/web/src/index.html
@@ -412,7 +412,7 @@
 						<ul class="unstyled"></ul>
 					</div>
 				</div>
-				<div class="close"><a href="">X</a></div>
+				<a class="close" href="">X</a>
 			</div>
 
 			<div class="template" id="template-fight-start">
