alecou - Modification gestion info top winners

--- a/web/src/index.html
+++ b/web/src/index.html
@@ -222,7 +222,7 @@
 
 			<div class="template" id="template-winner-tour">
 				<li class=":year pos-:pos"  title=":bulle">
-					<a href="#" style="top::hpos;">:pos_title</a>
+					<span style="top::hpos;">:pos_title</span>
 					<div class="wins">:wins</div>
 					<div class="year">:year</div>
 				</li>
